Bug 83465 - FILEOPEN: RTF - Numbering list number font name not retained
Summary: FILEOPEN: RTF - Numbering list number font name not retained
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
3.6.7.2 release
Hardware: Other All
: medium normal
Assignee: Miklos Vajna
URL:
Whiteboard: target:4.4.0
Keywords: filter:rtf, notBibisectable, regression
Depends on:
Blocks: RTF-Bullet-Number-Lists
  Show dependency treegraph
 
Reported: 2014-09-03 23:44 UTC by Yousuf Philips (jay) (retired)
Modified: 2021-04-14 11:13 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Yousuf Philips (jay) (retired) 2014-09-03 23:44:42 UTC
Steps:
1) Open attachment 104064 [details]
2) One page 1, the numbering list numbers are supposed to be Verdana, but instead they are using Liberation Serif

Tested in 4.2.6, 4.3.2 and master on Linux. One of the two lists has the correct Verdana font name in 3.3.0 (old rtf importer).
Comment 1 Bugcruncher 2014-09-17 15:17:31 UTC
I can confirm reporter's observation. In WORD Viewer Numbering font seems to be Verdana, but in LibreOffice ist seems to be Liberation Serif (shown if caret flashes before number). Looks like a bug, but also might be a damaged document wiht wrong RTF, I can't tell
Comment 2 Yousuf Philips (jay) (retired) 2014-09-17 20:39:37 UTC
Setting to NEW as bugcruncher has confirmed it. No the file isnt damaged as it was pulled out as a sample file from within another file, which showed the same behaviour.
Comment 3 Miklos Vajna 2014-09-24 15:51:31 UTC
I see the problem. This is an issue for both DOCX and RTF import, though works for binary DOC. I'll look into this.
Comment 4 Commit Notification 2014-09-25 08:43:23 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=f5ba3098b4406ff8656f2710df8af6ca6edcddc8

fdo#83465 writerfilter: import font of numbering



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 5 Miklos Vajna 2014-09-25 08:46:33 UTC
This fixes the DOCX version of the bugdoc, the original RTF version still needs fixing.
Comment 6 Commit Notification 2014-09-25 19:37:33 UTC
Miklos Vajna committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=c1f8437dbed0e8b989e41a345ef7e658a6e8a4cd

fdo#83465 RTF import: handle font of numbering



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 7 Robinson Tryon (qubit) 2015-12-17 11:13:02 UTC
Migrating Whiteboard tags to Keywords: (notBibisectable filter:rtf)
Remove redundant 'rtf_filter'.
[NinjaEdit]