fdo#83465 writerfilter: import font of numbering

Change-Id: I0afe389fa6ea8b4c701232c6ecb425d5fdcde5fe